@@ -362,8 +362,6 @@
 1369 2017- 2-20 recurrent operations validation: cancelled operations
                 should be italic+grayed
 
-1371 2017- 2-22 myIGridlist should send a changed signal when removing a row 
-
 1372
 
 -----------------------------------------------------------------------
@@ -728,6 +726,9 @@
      2017- 2-20 done
 
 1370 2017- 2-22 ofaClosingParmsBin should implement myIGridlist
+     2017- 2-22 done
+
+1371 2017- 2-22 myIGridlist should send a changed signal when removing a row
      2017- 2-22 done
 
 -----------------------------------------------------------------------
