@@ -32,6 +32,7 @@
 
  Other changes:
 
+   - myIGridlist: has new 'my-row-changed' signal (todo #1371).
    - my_igridlist_add_row(): add user data argument.
    - my_igridlist_get_rows_count(): renamed to my_igridlist_get_details_count().
    - ofaClosingParmsBin: implements myIGridlist interface (todo #1370).
